# CppVSCodeProjInit

./: CMakeLists.txt  README.md  main  main.cpp  speak.h
src/: main.cpp
